<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_Main_Judul"
        style="@style/textView_Style3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Judul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Main_Sub1"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Main_Sub1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Main_Judul" />

    <RadioGroup
        android:id="@+id/RadioGroup_Main_RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub1">

        <RadioButton
            android:id="@+id/radioButton_Main_Opt1"
            style="@style/textView_Style2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtrendang" />

        <RadioButton
            android:id="@+id/radioButton_Main_Opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textView_Style2"
            android:text="@string/txtayam" />

        <RadioButton
            android:id="@+id/radioButton_Main_Opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textView_Style2"
            android:text="@string/txtlele" />

        <RadioButton
            android:id="@+id/radioButton_Main_Opt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textView_Style2"
            android:text="@string/txtkikil" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_Main_Sub2"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Main_Sub2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup_Main_RG" />

    <RatingBar
        android:id="@+id/ratingBar_Main_Pedas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub2" />

    <TextView
        android:id="@+id/textView_Main_Sub3"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Main_Sub3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_Main_Pedas" />

    <CheckBox
        android:id="@+id/checkBox_Main_Chk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtnasi"
        style="@style/textView_Style2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub3" />

    <CheckBox
        android:id="@+id/checkBox_Main_Chk2"
        style="@style/textView_Style2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtkerupuk"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Main_Chk1"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub3" />

    <CheckBox
        android:id="@+id/checkBox_Main_Chk3"
        style="@style/textView_Style2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtlalapan"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Main_Chk2"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub3" />

    <CheckBox
        android:id="@+id/checkBox_Main_Chk4"
        style="@style/textView_Style2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtsambal"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Main_Chk3"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Sub3" />

    <Button
        android:id="@+id/button_Main_Submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Submit"
        style="@style/button_Style1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Main_Chk1" />

</android.support.constraint.ConstraintLayout>