<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView_Result_Judul"
        style="@style/textView_Style3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Judul"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_Result_Ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"
        />

    <TextView
        android:id="@+id/textView_Result_Makan"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Makan"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_Result_Judul" />

    <TextView
        android:id="@+id/textView_Result_Makananval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_Text"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Makan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Harga1"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Harga1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Makan" />

    <TextView
        android:id="@+id/textView_Result_Harga1val"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_Number"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Harga1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Pedas"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Pedas"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Harga1" />

    <TextView
        android:id="@+id/textView_Result_Pedasval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_Text"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Pedas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Tambahan"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Tambahan"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Pedas" />

    <TextView
        android:id="@+id/textView_Result_Tambahanval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_Text"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Tambahan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Harga2"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Harga2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Tambahan" />

    <TextView
        android:id="@+id/textView_Result_Harga2val"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dummy_Text"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Harga2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Total"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView_Result_Total"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Result_Ver1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Harga2" />

    <TextView
        android:id="@+id/textView_Result_Totalval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dummy_Number"
        style="@style/textView_Style2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Result_Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_Result_Ver1" />

    <TextView
        android:id="@+id/textView_Result_Thanks"
        style="@style/textView_Style1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView_Result_Thanks"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Result_Total" />

</android.support.constraint.ConstraintLayout>